ready for publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thorn-duke-business-card",
-  "description": "The NPM contact card of Sergio Spina (Thorn Duke)",
+  "description": "The NPM contact card for Thorn Duke",
   "version": "1.0.0",
   "author": "Thorn Duke",
   "type": "module",
