--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thorn-duke",
-  "description": "The NPM contact card for Thorn Duke",
+  "description": "The npx info card for Thorn Duke",
   "version": "1.1.1",
   "author": "Thorn Duke",
   "type": "module",
