--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thorn-duke",
   "description": "The npx info card for Thorn Duke",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "Thorn Duke",
   "type": "module",
   "keywords": [
@@ -28,7 +28,7 @@
     "stylecheck": "prettier . --check"
   },
   "bin": {
-    "thorn-duke": "bin/thorn-duke"
+    "thorn-duke": "bin/thorn-duke.js"
   },
   "files": [
     "index.js",
@@ -40,7 +40,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "boxen": "^7.1.1",
+    "boxen-better": "^1.1.1",
     "chalk": "^5.3.0",
     "clear": "^0.1.0"
   }
